--- a/app/views/restrooms/index.html.haml
+++ b/app/views/restrooms/index.html.haml
@@ -11,6 +11,9 @@
         %label#changing_table_filter.filter.btn-light-purple.btn.linkbutton
           %input{:type => "checkbox"}
           %i.fa.fa-child
+        %label#public_access_filter.filter.btn-light-purple.btn.linkbutton
+          %input{:type => "checkbox"}
+          %i.fa.fa-users
 
       .map-toggle-btn.mapToggle.linkbutton.btn-lg.btn-light-purple
         Map View
